--- a/templates/src/css/main.scss
+++ b/templates/src/css/main.scss
@@ -8,3 +8,5 @@
 @import "footer/footer";
 @import "preloader/preloader";
 @import "navigator/navigator";
+@import "animatecss/animate";
+@import "modals/modals";
