--- a/templates/views/ajax.jade
+++ b/templates/views/ajax.jade
@@ -10,7 +10,7 @@
         data-up= value.up
         data-ajax = value.ajax
         animationend="endpage"
-        class="pt-page"
+        class="pt-page " + value.class
         )
           div(
           class="container clearfix"
