--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -30,3 +30,4 @@ block content
 
   include ../ababool_plugins/footer/index.jade
   include ../ababool_plugins/navigator/index.jade
+  include ../ababool_plugins/modals/modals/modal1.jade
