--- a/templates/views/pages/amp/contents.jade
+++ b/templates/views/pages/amp/contents.jade
@@ -22,3 +22,21 @@ if index=="blog/ababool-plugins"
 
 if index=="tag"
   include tags/tag.jade
+
+if index=="blog/new-version-1.4.0"
+  include blog/new-version-1.4.0.jade
+
+if index=="blog/ababool-in-production-with-nginx-and-pm2"
+  include blog/ababool-in-production-with-nginx-and-pm2.jade
+
+if index=="blog/ababool-transitions"
+  include blog/ababool-transitions.jade
+
+if index=="blog/ababool-animations"
+  include blog/ababool-animations.jade
+
+if index=="blog/ababool-modals"
+  include blog/ababool-modals.jade
+
+if index=="blog/ababool-thanks-and-codes"
+  include blog/ababool-thanks-and-codes.jade
