--- a/templates/views/pages/blog/contents.jade
+++ b/templates/views/pages/blog/contents.jade
@@ -1,5 +1,3 @@
-
-
 if index=="blog"
   include blog.jade
 
@@ -20,3 +18,21 @@ if index=="blog/ababool-plugins"
 
 if index=="blog/accelerated-mobile-pages"
   include accelerated-mobile-pages.jade
+
+if index=="blog/new-version-1.4.0"
+  include new-version-1.4.0.jade
+
+if index=="blog/ababool-in-production-with-nginx-and-pm2"
+  include ababool-in-production-with-nginx-and-pm2.jade
+
+if index=="blog/ababool-transitions"
+  include ababool-transitions.jade
+
+if index=="blog/ababool-animations"
+  include ababool-animations.jade
+
+if index=="blog/ababool-modals"
+  include ababool-modals.jade
+
+if index=="blog/ababool-thanks-and-codes"
+  include ababool-thanks-and-codes.jade
