--- a/templates/views/pages/contents.jade
+++ b/templates/views/pages/contents.jade
@@ -15,6 +15,9 @@ if index=="how"
 if index=="wow"
   include wow/wow.jade
 
+if index=="private-policy"
+  include sections/private-policy.jade
+
 if index=="with"
   include sections/with.jade
 
@@ -86,3 +89,6 @@ if index=="mainmenu"
 
 if index=="es"
   include es/esp.jade
+
+if index=="example1"
+  include examples/example1.jade
