--- a/templates/views/pages/sections/how.jade
+++ b/templates/views/pages/sections/how.jade
@@ -11,7 +11,7 @@ div(class="box col-xs-12 col-sm-12 col-md-10 col-lg-8 lightbox")
       ng-click="gotopage('start',10)"
       ) Start and installation
 
-    li(class="list-group-item")
+    li(class="list-group-item hidden" when-visible="animateElementIn" when-not-visible="animateElementOut" )
       h4
         span(
         class="link"
@@ -20,7 +20,7 @@ div(class="box col-xs-12 col-sm-12 col-md-10 col-lg-8 lightbox")
       p
         | Pages are the way that we create front views with Ababool.
 
-    li(class="list-group-item")
+    li(class="list-group-item hidden" when-visible="animateElementIn" when-not-visible="animateElementOut" )
       h4
         span(
         class="link"
@@ -29,7 +29,7 @@ div(class="box col-xs-12 col-sm-12 col-md-10 col-lg-8 lightbox")
       p
         | Learn how to create a feedbacks/comments system with Ababool
 
-    li(class="list-group-item")
+    li(class="list-group-item hidden" when-visible="animateElementIn" when-not-visible="animateElementOut" )
       h4
         span(
         class="link"
@@ -39,7 +39,7 @@ div(class="box col-xs-12 col-sm-12 col-md-10 col-lg-8 lightbox")
         | Develop easy RESTful applications with Ababool.
 
 
-    li(class="list-group-item")
+    li(class="list-group-item hidden" when-visible="animateElementIn" when-not-visible="animateElementOut" )
       h4
         span(
         class="link"
