--- a/templates/views/pages/sections/what.jade
+++ b/templates/views/pages/sections/what.jade
@@ -1,51 +1,52 @@
-div(class="box col-xs-12 col-sm-12 col-md-10 col-lg-8 darkbox")
+div(class="box col-xs-12 col-sm-12 col-md-10 col-lg-8 white")
   h1 What is Ababool?
-  h4
-    | Main Features and aspects of Ababool.<br/>
-    | Open source, creative and smart MEAN Javascript Full-Stack Solution.
 
-  ul(class="list-group list-group-black mt20")
+  h4(class="mt20  animated" data-animation="bounceInLeft") A tool to create web applications
+  p(class="mt21  animated" data-animation="fadeInUp")
+    | First of all, Ababool is a tool. A tool to develop ideas in web format.
+    | <br/>Ababool is thinked to help.
 
-    li(class="list-group-item")
-      h4 Simple, efficient and elegant
-      p
-        | Ababool is designed to develop beautiful, powerful and functional sites.<br/>
-        | Ababool combines HTML5 and CSS3 transitions to achieve that nice web navigation.
+  h4(class="mt20  animated" data-animation="bounceInLeft") A Single Page Application
+  p(class="mt21  animated" data-animation="fadeInUp")
+    | A single-page application (SPA) is a web application or web site that fits on a single web page with the goal
+    | of providing a more fluent user experience similar to a desktop application. In a SPA, either all
+    | necessary code – HTML, JavaScript, and CSS – is retrieved with a single page load,
+    | or the appropriate resources are dynamically loaded by AJAX and added to the page as necessary,
+    | usually in response to user actions.
+    | <br> - (Wikipedia)
 
-    li(class="list-group-item")
-      h4 A tool for creative developers
-      p
-        | Web calculators, corporate websites, personal brand, presentations,
-        | web publications, microsites, blogs, magazines, stories, portfolios...<br/>
-        | A tool to develop ideas!!
+  h4(class="mt20  animated" data-animation="bounceInRight") A MEAN / JEAN solution
+  p(class="mt21  animated" data-animation="fadeInUp")
+    | A MEAN solution makes use of MongoDB, Express.js, Angular.js, and Node.js.
+    | <br/>We can leave out the MongoDB database and use only JSON: a JEAN solution.
 
-    li(class="list-group-item")
-      h4 Single Web Page  Application - AJAX
-      p
-        | <strong>Ababool</strong> is a <em><strong>Single Web Page Application</strong></em>
-        | so only loads one page. The page does not reload at any point in the process.<br/>
-        | All the new content is retrieved using <strong>AJAX</strong> calls,
-        | keeping the user all the time in the same page with no reloads.
+  h4(class="mt20  animated" data-animation="bounceInLeft") A Javascript Full Stack project
+  p(class="mt21  animated" data-animation="fadeInUp")
+    | All Ababool solution is written in Javascript for both server-side and client-side execution environments.
 
-    li(class="list-group-item")
-      h4 SEO friendly
-      p
-        | Each content (page or view) can have its own personality
-        | (<strong>URL, title, canocical, next/previous page, description,....</strong>),
-        | and can be called separately.<br/>
-        | We could say that <strong>Ababool </strong>is a
-        | <strong>Multiple Single Web Page Application</strong>,
-        | because you can enter the application directly to each content (page),
-        | obtaining different entries (first pages) to the web application.
+  h4(class="mt20  animated" data-animation="bounceInRight") Open Source: MIT licensed
+  p(class="mt21  animated" data-animation="fadeInUp")
+    | Ababool is open source and free: <a href="https://opensource.org/licenses/MIT" class="white" target="blank">MIT licensed</a>.
 
-    li(class="list-group-item")
-      h4 Responsive design
-      | <p><strong>Ababool is responsive design, </strong>thought to work on all devices.    </p>
+  h4(class="mt20  animated" data-animation="bounceInLeft") Simple and easy
+  p(class="mt21  animated" data-animation="fadeInUp")
+    | Ababool is a simple tool. An easy way to learn how to develop with Angular.js, Node.js, Express.js, MongoDB, JSON, AJAX, Gulp, etc..
+    | <br/>If it is easy to use, it will be easy to grow!
 
-    li(class="list-group-item")
-      h4 Ababool Page transitions
-      | <p>You can choose among more than 60 incredible transition effects</p>
+  h4(class="mt20  animated" data-animation="bounceInRight") Creative and smart
+  p(class="mt21  animated" data-animation="fadeInUp")
+    | Ababool is nice on the front.
+    | <br/>The page transitions, the element animations and the SPA behavior makes Ababool looks like clean, smart and nice.
+    | <br/>Ababool is a tool to help developing creative sites.
 
-    li(class="list-group-item")
-      h4 Plugins
-      | <p><strong>Ababool </strong> system is based on <strong>plugins</strong>, to facilitate the possibility of increasing system functionality.</p>
+  h4(class="mt20  animated" data-animation="bounceInLeft") SEO friendly
+  p(class="mt21  animated" data-animation="fadeInUp")
+    | Ababool is a tool for develop SPA (according to what has been said above),
+    | but also it offers the possibility that each page is requested separately.
+    | Each Ababool page can have its own URL, Title, Description, canonical and other needed SEO and social metas.
+    | <br/>Ababool integrates AMP HTML pages and JSON-ld schemas.
+
+  h4(class="mt20  animated" data-animation="bounceInLeft") Designed to adapt and grow
+  p(class="mt21  animated" data-animation="fadeInUp")
+    | Ababool is based on plugins.
+    | <br/>Thought for developing different kinds of web sites, the Babool plugins lets to easily adapt to the needs.
