--- a/templates/views/amp/header.jade
+++ b/templates/views/amp/header.jade
@@ -27,3 +27,6 @@ style(amp-custom).
   .breadcrumb {background-color: #f2f2f2; padding: 10px;}
   ul { list-style-type : none}
   pre {background-color:#000; color:#fff; padding: 10px;}
+
+if params[0].ldjson
+  script(type="application/ld+json") !{JSON.stringify(params[0].ldjson)}
