--- a/templates/views/pages/blog/blog.jade
+++ b/templates/views/pages/blog/blog.jade
@@ -5,7 +5,7 @@ div(class="box col-xs-12 col-sm-12 col-md-10 col-lg-8 darkbox")
     ul(class="list-group list-group-transparent")
 
       each post in data
-        li(class="list-group-item")
+        li(class="list-group-item animated" data-animation="bounceInLeft")
           h4
             span(
             class="link"
@@ -16,4 +16,4 @@ div(class="box col-xs-12 col-sm-12 col-md-10 col-lg-8 darkbox")
           div
             | <button class="btn btn-primary btn-xs" ng-click="gotopage('#{post.id}',30)"><span class="glyphicon glyphicon-file"  aria-hidden="true"></span>Read post</button>
             | <a href="#{conf.general.domain + post.slug}" class="btn btn-default btn-xs">
-            | <span class="glyphicon glyphicon-link" aria-hidden="true"></span> Permanent link</a>
+            | <span class="glyphicon glyphicon-link" aria-hidden="true"></span></a>
