--- a/templates/views/pages/footer/contact.jade
+++ b/templates/views/pages/footer/contact.jade
@@ -4,22 +4,33 @@ div(class="box col-xs-12 col-sm-12 col-md-10 col-lg-8 darkbox")
 
   div(class="box3")
 
-      h4 Social
+    div(class="ibox")
+      img(src="images/twitter.png" class="icon")
       p
-        | Follow us on Twitter: <a href="https://twitter.com/ababooljs" target="blank">@ababooljs</a>
+        | <br/><a href="https://twitter.com/ciroartigot" target="blank" class="adark">@ciroartigot</a> on Twitter
+      div(class="clearfix")
 
-      h4(class="mt20") Discussions
+    div(class="ibox")
+      img(src="images/linkedin.png" class="icon")
       p
-        | Join the Linked In <a href="https://www.linkedin.com/grp/home?gid=8478122" target="blank">Discussion group</a>
+        | <a href="https://twitter.com/ciroartigot" target="blank" class="adark">Ciro Artigot</a> on linked in
+        | <br/>Join our  <a href="https://www.linkedin.com/grp/home?gid=8478122" target="blank" class="adark">disscusion group</a> on linked in
+      div(class="clearfix")
 
-      h4(class="mt20") Email
+    div(class="ibox")
+      img(src="images/mail.png" class="icon")
       p
-        | Dontact us by email: <a href="mailto:info@algosemueve.es" target="blank">info@algosemueve.es</a>
+        | <br/>By email: <a href="mailto:info@algosemueve.es" target="blank">info@algosemueve.es</a>
+      div(class="clearfix")
 
-      h4(class="mt20") Issues
+    div(class="ibox")
+      img(src="images/github.png" class="icon")
       p
-        | Please submit issues to <a href="https://github.com/CiroArtigot/ababool/issues" target="blank">Git Hub</a>
+        | <br/>Submit issues to <a href="https://github.com/CiroArtigot/ababool/issues" target="blank">Git Hub</a>
+      div(class="clearfix")
 
-      h4(class="mt20") Feedbacks
+    div(class="ibox")
+      img(src="images/comments.png" class="icon")
       p
-        | <span class="link" ng-click="gotopage('feedbacks',32)">Give us your feedbacks!</span>
+        | <br/><span class="link" ng-click="gotopage('feedbacks',32)">Give us your feedbacks!</span>
+      div(class="clearfix")
