--- a/templates/views/pages/footer/license.jade
+++ b/templates/views/pages/footer/license.jade
@@ -1,9 +1,31 @@
-div(class="box col-xs-12 col-sm-12 col-md-10 col-lg-8")
+div(class="box col-xs-12 col-sm-12 col-md-12 col-lg-12")
   h1 MIT licensed
   h3
     | Ababool is open source and free
 
-  div(class="box4")
-    img(src="/images/license.png" class="pull-left")
-    h4(class="h4-2")
+  div
+    img(src="/images/license.png" class="icon")
+    p
       | Ababool is <a href="https://opensource.org/licenses/MIT" target="blank">MIT licensed</a>
+    p
+      | Copyright (c) 2016 Ciro Artigot <info@algosemueve.es>
+
+    p
+      | Permission is hereby granted, free of charge, to any person obtaining
+      | a copy of this software and associated documentation files (the
+      | 'Software'), to deal in the Software without restriction, including
+      | without limitation the rights to use, copy, modify, merge, publish,
+      | distribute, sublicense, and/or sell copies of the Software, and to
+      | permit persons to whom the Software is furnished to do so, subject to
+      | the following conditions:
+    p
+      | The above copyright notice and this permission notice shall be
+      | included in all copies or substantial portions of the Software.
+    p
+      | THE SOFTWARE IS PROVIDED 'AS IS', WITHOUT WARRANTY OF ANY KIND,
+      | EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
+      | MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
+      | IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
+      | CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
+      | TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
+      | SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
