--- a/templates/views/pages/sections/home.jade
+++ b/templates/views/pages/sections/home.jade
@@ -8,52 +8,52 @@ div(class="box col-xs-12 col-sm-12 col-md-10 col-lg-8")
 
   h4
     | Get Ababool by running...
-  p
+  p(class="animated" data-animation="bounceInLeft")
     | <code>$&nbsp;sudo&nbsp;npm&nbsp;install&nbsp;-g&nbsp;ababool-generator</code>
 
-  p
+  p(class="animated" data-animation="bounceInLeft")
     | <code>$&nbsp;ababool&nbsp;myapp</code>
 
-  p
+  p(class="animated" data-animation="bounceInRight")
     | <code>$&nbsp;cd&nbsp;myapp</code>
 
-  p
+  p(class="animated" data-animation="bounceInLeft")
     | <code>$&nbsp;npm&nbsp;install</code>
 
-  p
+  p(class="animated" data-animation="bounceInRight")
     | <code>$&nbsp;gulp</code>
 
-  p
+  p(class="animated" data-animation="bounceInLeft")
     | <code>$&nbsp;npm&nbsp;start</code>
 
-  h4(class="mt30") Ababool stands for:
+  h4(class="mt30 ") Ababool stands for:
 
-  h4(class="mt20") Nodejs
-  p Event-driven I/O server-side JavaScript environment based on V8.
+  h4(class="mt20 animated" data-animation="bounceInLeft") Nodejs
+  p(class="animated white" data-animation="bounceInRight")  Event-driven I/O server-side JavaScript environment based on V8.
 
-  h4(class="mt20") Express
-  p Fast, unopinionated, minimalist web framework
+  h4(class="mt20 animated" data-animation="bounceInLeft") Express
+  p(class="animated white" data-animation="bounceInRight")  Fast, unopinionated, minimalist web framework
 
-  h4(class="mt20") Mongodb
-  p The leading NoSQL database, empowering businesses to be more agile and scalable.
+  h4(class="mt20 animated" data-animation="bounceInLeft") Mongodb
+  p(class="animated white" data-animation="bounceInRight") The leading NoSQL database, empowering businesses to be more agile and scalable.
 
-  h4(class="mt20") Angularjs
-  p AngularJS is what HTML would have been, had it been designed for building web-apps.
+  h4(class="mt20 animated" data-animation="bounceInLeft") Angularjs
+  p(class="animated white" data-animation="bounceInRight")  AngularJS is what HTML would have been, had it been designed for building web-apps.
 
-  h4(class="mt20") Gulp
-  p The streaming build system
+  h4(class="mt20 animated" data-animation="bounceInLeft") Gulp
+  p(class="animated white" data-animation="bounceInRight")  The streaming build system
 
-  h4(class="mt20") Bower
-  p The browser package manager
+  h4(class="mt20 animated" data-animation="bounceInLeft") Bower
+  p(class="animated white" data-animation="bounceInRight")  The browser package manager
 
-  h4(class="mt20") Sass
-  p An extension of CSS that adds power and elegance to the basic language.
+  h4(class="mt20 animated" data-animation="bounceInLeft") Sass
+  p(class="animated white" data-animation="bounceInRight")  An extension of CSS that adds power and elegance to the basic language.
 
-  h4(class="mt20") Jade HTML
-  p An elegant templating language focused on enabling quick HTML coding.
+  h4(class="mt20 animated" data-animation="bounceInLeft") Jade HTML
+  p(class="animated white" data-animation="bounceInRight")  An elegant templating language focused on enabling quick HTML coding.
 
-  h4(class="mt20") npm
-  p A package manager for JavaScript
+  h4(class="mt20 animated" data-animation="bounceInLeft") npm
+  p(class="animated white" data-animation="bounceInRight")  A package manager for JavaScript
 
-  h4(class="mt20") pm2
-  p Production process manager for Node.JS applications with a built-in load balancer.
+  h4(class="mt20 animated" data-animation="bounceInLeft") pm2
+  p(class="animated white" data-animation="bounceInRight")  Production process manager for Node.JS applications with a built-in load balancer.
